--- a/css/style1.css
+++ b/css/style1.css
@@ -1,8 +1,8 @@
 .cb-slideshow,
 .cb-slideshow:after { 
-    position: fixed;
+    position: relative;
     width: 100%;
-    height: 100%;
+    height:200px;
     top: 0px;
     left: 0px;
     z-index: 0; 
@@ -13,7 +13,7 @@
 }
 .cb-slideshow li span { 
     width: 100%;
-    height: 100%;
+    height: 700px;
     position: absolute;
     top: 0px;
     left: 0px;
