--- a/css/style1.css
+++ b/css/style1.css
@@ -2,7 +2,7 @@
 .cb-slideshow:after { 
     position: relative;
     width: 100%;
-    height:200px;
+    height: 500px;
     top: 0px;
     left: 0px;
     z-index: 0; 
@@ -13,7 +13,7 @@
 }
 .cb-slideshow li span { 
     width: 100%;
-    height: 700px;
+    height: 500px;
     position: absolute;
     top: 0px;
     left: 0px;
@@ -32,7 +32,7 @@
 }
 .cb-slideshow li div { 
     z-index: 1000;
-    position: absolute;
+    position: relative;
     bottom: 30px;
     left: 0px;
     width: 100%;
